--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>LAMPOT JOURNAL</title>
+<title>NEWTONE</title>
+
+<!-- Favicon -->
+<link rel="icon" href="https://i.imgur.com/TX868pW.png" type="image/png">
+
+<!-- Social Preview (Link Embed Image) -->
+<meta property="og:title" content="NEWTONE">
+<meta property="og:image" content="https://i.imgur.com/zBqC1Bd.png">
+<meta property="og:type" content="website">
+<meta property="og:description" content="LAMPOT JOURNAL — A Project by NEWTONE">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="NEWTONE">
+<meta name="twitter:image" content="https://i.imgur.com/zBqC1Bd.png">
 
 <!-- IBM Plex Mono font -->
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
