--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ MAKE SURE YOU KEEP A FEW GOOD JEWS AROUND YOU   THEY CAN NEGOTIATE VERY WELL TO 
   <div class="flex-container">
     <textarea id="opinionText" placeholder="WRITE YOUR OPINION..." required></textarea>
     <button id="sendOpinion">SEND</button>
-    <div id="notification" class="notification">OPINION SENT!</div>
+    <div id="notification" class="notification">OPINION SENT! ADDING OPINION NOW</div>
   </div>
 </div>
 
@@ -269,4 +269,5 @@ MAKE SURE YOU KEEP A FEW GOOD JEWS AROUND YOU   THEY CAN NEGOTIATE VERY WELL TO 
 
 </body>
 </html>
+
 
