--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ MAKE SURE YOU KEEP A FEW GOOD JEWS AROUND YOU   THEY CAN NEGOTIATE VERY WELL TO 
   </div>
 </div>
 
-<footer>© 2025 NEWTONE — All rights reserved.</footer>
+<footer>© 2025 NEWTONE — All rights reserved. All Comments uncensored</footer>
 
 <!-- Audio Button -->
 <button id="audioButton" class="audio-button">
@@ -269,5 +269,6 @@ MAKE SURE YOU KEEP A FEW GOOD JEWS AROUND YOU   THEY CAN NEGOTIATE VERY WELL TO 
 
 </body>
 </html>
+
 
 
