--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:description" content="LAMPOT JOURNAL — A Project by NEWTONE">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="NEWTONE">
-<meta name="twitter:image" content="https://i.imgur.com/zBqC1Bd.png">
+<meta name="twitter:image" content="https://i.imgur.com/3SbSC7w.jpeg">
 
 <!-- IBM Plex Mono font -->
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
@@ -269,6 +269,7 @@ MAKE SURE YOU KEEP A FEW GOOD JEWS AROUND YOU   THEY CAN NEGOTIATE VERY WELL TO 
 
 </body>
 </html>
+
 
 
 
