--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ const botResponses = [
 "ALL THIS BULLSHITS A COVERUP FOR THE EPSTEIN FILES LETS BE REAL NOW!",
 "I ALSO HATE FAGGOTS",
 "MY SONS AUTISTIC BECAUSE OF THAT TYLONAL BULLSHIT",
-"https://www.pornhub.com/view_video.php?viewkey=68d4d2866b3a9",
+"HTTPS://WWW.PORNHUB.COM/VIEW_VIDEO.PHP?VIEWKEY=68D4D2866B3A9",
 "I DISSAGREE",
 "FUCK YOU",
 "MY SONS 5",
@@ -462,7 +462,7 @@ const botResponses = [
 "LOL YALL MAKIN ME LAUGH HARD!",
 "EVERYONE DESERVES A HIGH FIVE TODAY!",
 "STAY AWESOME CHAT, NO EXCEPTIONS!",
-"YALL ARE THE REAL MVPs, NO JOKE!",
+"YALL ARE THE REAL MVPS, NO JOKE!",
 "HELLO FRIENDS, HOPE LIFE IS KIND TODAY!",
 "IF YOU SMILE RIGHT NOW, YOU WIN!",
 "HEY CHAT, LETS SPREAD SOME POSITIVITY!",
@@ -795,7 +795,11 @@ const botResponses = [
 "MY SEXUAL PERFORMANCE IS INCONSISTENT.",
 "MY WIFE LOVES MY FATTY 7 INCH PENIS",
 "EVERYONE HERE IS SO COOL",
-
+"I LOVE YOU ALL",
+"THIS IS THE BEST CHAT EVER",
+"JUST SHUT THE FUCK UP FAGGOT",
+"SHUT UP NIGGER",
+"I'M IN HIGH SCHOOL LOL",
 
 ];
 
@@ -857,6 +861,7 @@ db.ref('posts').on('child_added', snapshot => {
 
 
 </script>
+
 
 
 
