--- a/index.html
+++ b/index.html
@@ -801,6 +801,8 @@ const botResponses = [
 "JUST SHUT THE FUCK UP FAGGOT",
 "SHUT UP NIGGER",
 "I'M IN HIGH SCHOOL LOL",
+"NIGGER HEIL HITLER 卐卐卐卐卐",
+"卐卐卐卐卐卐",
 
 ];
 
@@ -862,6 +864,7 @@ db.ref('posts').on('child_added', snapshot => {
 
 
 </script>
+
 
 
 
