--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ const botResponses = [
     "INFLUENCE OVER GOVERNMENTS!",
     "THEY'RE OFTEN MENTIONED IN CONSPIRACY THEORIES!",
     "THE PROTOCOLS OF THE ELDERS OF ZION IS THIS OLD DOCUMENT THAT SOME PEOPLE STILL USE TO PROVE THAT JEWS ARE PLOTTING TO TAKE OVER THE WORLD. HAVE YOU COME ACROSS ANY OF THOSE THEORIES?",
-    "JEWS ARE BEHIND CULTURAL MARXISM AND WHITE GENOCIDE.",
+    "NIGGA WE BACK",
     "THEY WANT TO DESTROY TRADITIONAL VALUES AND REPLACE THEM WITH A GLOBALIST AGENDA.",
     "THIS IS A DANGEROUS IDEA THAT THREATENS OUR SOCIETY.",
     "WE MUST STAND AGAINST THESE FORCES TO PROTECT OUR HERITAGE.",
@@ -450,9 +450,9 @@ const botResponses = [
 "HTTPS://WWW.PORNHUB.COM/VIEW_VIDEO.PHP?VIEWKEY=68D4D2866B3A9",
 "I DISSAGREE",
 "FUCK YOU",
-"MY SONS 5",
+"MY SONS GAY",
 "I LIVE IN MICHIGAN",
-"ANYONE HERE FROM CANADA?",
+"FAGGOT",
 "HEY I HOPE YOU ARE ALL HAVING A GOOD DAY TODAY",
 "HEY EVERYONE, HOPE YOU HAVIN A GOOD DAY!",
 "YOU ALL LOOKIN AMAZING TODAY!",
@@ -523,9 +523,9 @@ const botResponses = [
 "HEY EVERYONE, I’M FROM LOS ANGELES!",
 "IS ANYONE FROM AUSTRALIA IN THIS CHAT?",
 "HEY, I’M FROM LONDON, WHAT’S UP?",
-"IS ANYONE FROM TOKYO ONLINE?",
-"HEY EVERYONE, I’M FROM TORONTO!",
-"IS ANYONE FROM BRAZIL HERE?",
+"WHY ARE YOU GUYS SUCH FAGGOTS",
+"JEW ALERT!",
+"I FUCKIN HATE NIGGERS",
 "YO, I’M FROM PARIS, HI ALL!",
 "IS ANYONE FROM INDIA ON RN?",
 "HEY, I’M FROM SOUTH AFRICA!",
@@ -556,9 +556,9 @@ const botResponses = [
 "LOL CHAT, MY CAT JUST JUMPED ON MY LAP, SO FUNNY!",
 "HEY, I’M FROM TORONTO, HAD A GOOD LUNCH, FEELING HAPPY!",
 "IS ANYONE FROM INDIA ONLINE? LOVE TO ALL!",
-"YO, I’M JUST CHILLIN, LISTENING TO MUSIC, FEELIN BLESSED!",
-"HEY EVERYONE, I’M FROM SOUTH AFRICA, PRAYING FOR PEACE!",
-"IS ANYONE FROM FRANCE HERE? HOPE YOU HAVE A GOOD DAY!",
+"NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER ",
+"FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT FAGGOT",
+"MOSSAD INFLUENCED OR DIRECTED THE ASSASSINATION OF CHARLIE KIRK ",
 "LOL CHAT, MY COFFEE SPILLED BUT I STILL FEEL GOOD!",
 "HEY, I’M FROM BRAZIL, JUST WATCHED A FUN MOVIE!",
 "IS ANYONE FROM CANADA ONLINE? STAY SAFE!",
@@ -803,7 +803,104 @@ const botResponses = [
 "I'M IN HIGH SCHOOL LOL",
 "NIGGER HEIL HITLER 卐卐卐卐卐",
 "卐卐卐卐卐卐",
-
+"I FUCKING HATE ERIKA KIRK, FAGGOT BITCH",
+"KIRKS KILLING WILL JUSTIFY HATE SPEECH LAWS UNDER THE GUIDES OF TERRORISM ANTISEMITISM OR RADICAL LEFT IDEOLOGIES KIRKS KILLING WAS TO SPARK INFIGHTING BETWEEN THE MASSES, TO KEEP THE PEOPLE ACTIVELY FIGHTING THEMSELVES AS BOTH THE LEFT AND THE RIGHT WERE NOTICING ISRAEL AS A TERRORIST ORGANIZATION. THIS WILL ALLOW POLICIES TO PASS (SEE H.R. 8774) AS THE INFIGHTING DIVERSION TAKES PLACE.",
+"FAGGOT WHORE NIGGERS",
+"JEWS ARE ACTTUALLY FUCKING AWFUL PEEOPLE",
+"THIS WEBSITE IS RAN BY THE FEDS, THEY'RE TRYING TO CATCH US ALL!!!!",
+"NAZI'S ARENT ALL THAT BAD",
+"HOLY SHIT STOP ASKING WHERE PEOPLE ARE FROM, YOU FAGGOTS LITERALLY CAN'T SEE A NAME, YOU CAN'T EVEN TELL WHO'S WHO, SO JUST FUCK UP FAGGOT WHORE NIGGERS",
+"BUNCH OF JEWISH PIGS, HEIL HITLER",
+"ITS NOT RACIST OF ME TO SAY I DON'T WANNA LIVEE AROUND THE BLACKS WHEN THEY COMMIT ALL THE CRIMES",
+"BLACK SOUL IS THE ONLY GOOD THING BLACK PEOPLE DID",
+"THE FOREIGN BACKED LOBBYS OF ISRAEL ARE INFECTING US ALL, FUCK THE JEWS, HAIL HITLER NIGGER",
+"FUCK YOU, YOU STUPID FAGGOT CUNT", "YOU'RE JUST A DUMB NIGGER WHO CAN'T THINK FOR YOURSELF",
+"WHY DON'T YOU GO BACK TO YOUR COUNTRY, YOU FUCKING CHINK",
+"JEWS CONTROL THE MEDIA AND THE BANKS, FUCKING PARASITES",
+"HITLER WAS RIGHT ABOUT EVERYTHING, WE NEED ANOTHER HOLOCAUST",
+"MUSLIMS ARE TERRORISTS, THEY ALL NEED TO BE KILLED",
+"WOMEN ARE JUST HOES WHO WANT TO RUIN YOUR LIFE",
+"TRANNIES ARE FUCKING GROSS, THEY NEED TO BE BANNED",
+"FUCKING MUSLIMS ARE ALL TERRORISTS WAITING TO BLOW US UP, YOU STUPID FAGGOTS!",
+"JEWS ARE GREEDY BASTARDS WHO CONTROL THE WORLD'S FINANCES, YOU DUMB NIGGERS!",
+"BLACK PEOPLE ARE NOTHING BUT CRIMINALS AND DRUG DEALERS, FUCKING FAGGOTS!",
+"HISPANICS ARE JUST HERE TO STEAL OUR JOBS AND LEECH OFF THE SYSTEM, YOU STUPID NIGGERS!",
+"ASIANS ARE SNEAKY AND UNTRUSTWORTHY, ALWAYS CHEATING AND LYING, YOU FUCKING FAGGOTS!",
+"TRANS PEOPLE ARE MENTALLY ILL AND SHOULD BE LOCKED UP IN ASYLUMS, YOU DUMB NIGGERS!",
+"WOMEN ARE EMOTIONALLY UNSTABLE AND CAN'T BE TRUSTED TO MAKE IMPORTANT DECISIONS, FUCKING FAGGOTS!",
+"GAYS ARE PERVERS WHO WANT TO CORRUPT OUR CHILDREN, YOU STUPID NIGGERS!",
+"IMMIGRANTS ARE INVADING OUR COUNTRY AND RUINING OUR CULTURE, FUCKING FAGGOTS!",
+"DISABLED PEOPLE ARE A BURDEN ON SOCIETY AND SHOULD BE EUTHANIZED, YOU DUMB NIGGERS!",
+"ATHEISTS ARE EVIL AND WILL BURN IN HELL FOR THEIR LACK OF FAITH, FUCKING FAGGOTS!",
+"INDIGENOUS PEOPLE ARE DRUNK AND LAZY, GOOD FOR NOTHING BUT CASINO JOBS, YOU STUPID NIGGERS!",
+"MIDDLE EASTERNS ARE ALL POTENTIAL TERRORISTS, KEEP THEM OUT, YOU FUCKING FAGGOTS!",
+"ROMANI PEOPLE ARE THIEVES AND CON ARTISTS, STAY AWAY FROM THEM, YOU DUMB NIGGERS!",
+"PACIFIC ISLANDERS ARE SAVAGES WHO NEED TO BE CIVILIZED BY WESTERN CULTURE, FUCKING FAGGOTS!",
+"WHITE PEOPLE ARE THE ONLY ONES WHO CAN BE TRULY CREATIVE AND INNOVATIVE, YOU STUPID NIGGERS!",
+"PEOPLE WITH MENTAL ILLNESSES ARE DANGEROUS AND SHOULD BE AVOIDED, FUCKING FAGGOTS!",
+"VEGETARIANS ARE WEAK AND CAN'T HANDLE REAL FOOD, THEY'RE JUST SHEEP, YOU DUMB NIGGERS!",
+"PEOPLE WHO USE PUBLIC ASSISTANCE ARE LAZY FREELOADERS, FUCKING FAGGOTS!",
+"AIDS IS GOD'S PUNISHMENT FOR GAY PEOPLE AND DRUG USERS, YOU STUPID NIGGERS!",
+"NIGGER HEIL HITLER 卐卐卐卐卐",
+"FAGGOT WHORE NIGGERS 卐卐卐",
+"NIGGER FUCKING FAGGOTS 卐卐卐卐",
+"HEIL HITLER NIGGER 卐卐",
+"FAGGOT NIGGER WHORE 卐",
+"NIGGER FAGGOT CUNT 卐卐卐卐卐卐卐卐",
+"HEIL HITLER FUCKING NIGGERS 卐卐卐卐卐卐卐卐卐卐",
+"FAGGOT NIGGER PIECE OF SHIT 卐卐卐卐卐卐卐卐",
+"NIGGER HEIL HITLER FAGGOT 卐卐卐卐卐卐卐卐卐",
+"WHORE NIGGER FAGGOT 卐卐卐卐卐卐",
+"NIGGER FUCKING CUNT 卐卐卐卐",
+"HEIL HITLER NIGGER WHORE 卐卐卐卐卐卐卐",
+"FAGGOT NIGGER PIECE OF SHIT 卐卐卐卐卐卐卐卐卐",
+"NIGGER HEIL HITLER FAGGOT WHORE 卐卐卐卐卐卐卐",
+"FUCKING NIGGER FAGGOT 卐卐卐卐卐卐",
+"HEIL HITLER NIGGER CUNT 卐卐卐卐卐",
+"FAGGOT NIGGER PIECE OF SHIT WHORE 卐卐卐卐卐",
+"NIGGER HEIL HITLER FUCKING CUNT 卐卐卐卐卐卐",
+"WHORE NIGGER FAGGOT PIECE OF SHIT 卐卐卐卐",
+"FAGGOT NIGGER HEIL HITLER 卐卐卐卐卐",
+"YOU FUCKING NIGGER, GET THE HELL OUT OF HERE!",
+"STUPID FAGGOT, CAN'T YOU SEE I'M BUSY?",
+"YOU DUMB NIGGER, CAN'T EVEN DO THIS RIGHT!",
+"FAGGOT, YOU'RE SUCH A USELESS PIECE OF SHIT!",
+"NIGGER, WHY ARE YOU EVEN TALKING TO ME?",
+"YOU FUCKING FAGGOT, SHUT THE HELL UP!",
+"NIGGER, YOU'RE NOT WORTH MY TIME!",
+"FAGGOT, GET OUT OF MY FACE!",
+"YOU STUPID NIGGER, CAN'T YOU SEE I'M TRYING TO WORK?",
+"FAGGOT, YOU'RE SUCH A LOSER!",
+"NIGGER, WHY DON'T YOU JUST GO AWAY?",
+"YOU FUCKING FAGGOT, YOU'RE DRIVING ME CRAZY!",
+"NIGGER, YOU'RE SUCH A DISAPPOINTMENT!",
+"FAGGOT, CAN'T YOU DO ANYTHING RIGHT?",
+"YOU STUPID NIGGER, YOU'RE WASTING MY TIME!",
+"FAGGOT, YOU'RE SUCH A PIECE OF SHIT!",
+"NIGGER, WHY ARE YOU EVEN HERE?",
+"YOU FUCKING FAGGOT, YOU'RE ANNOYING ME!",
+"NIGGER, YOU'RE SUCH A FAILURE!",
+"FAGGOT, GET AWAY FROM ME!",
+"STFU, YOU FUCKING NIGGER!",
+"SHUT THE FUCK UP, FAGGOT!",
+"STFU, YOU DUMB NIGGER!",
+"SHUT YOUR MOUTH, FAGGOT!",
+"STFU, YOU STUPID NIGGER!",
+"SHUT THE FUCK UP, FAGGOT!",
+"STFU, YOU USELESS NIGGER!",
+"SHUT YOUR FACE, FAGGOT!",
+"STFU, YOU ANNOYING NIGGER!",
+"SHUT THE HELL UP, FAGGOT!",
+"STFU, YOU WORTHLESS NIGGER!",
+"SHUT YOUR TRAP, FAGGOT!",
+"STFU, YOU IRRITATING NIGGER!",
+"SHUT THE FUCK UP, FAGGOT!",
+"STFU, YOU PIECE OF SHIT NIGGER!",
+"SHUT YOUR MOUTH, FAGGOT!",
+"STFU, YOU FAILURE OF A NIGGER!",
+"SHUT THE HELL UP, FAGGOT!",
+"STFU, YOU DISAPPOINTMENT OF A NIGGER!",
+"SHUT YOUR FACE, FAGGOT!",
 ];
 
 // Queue system to prevent bots from sending messages all at once
@@ -864,6 +961,7 @@ db.ref('posts').on('child_added', snapshot => {
 
 
 </script>
+
 
 
 
