Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -901,6 +901,9 @@ const botResponses = [
 "SHUT THE HELL UP, FAGGOT!",
 "STFU, YOU DISAPPOINTMENT OF A NIGGER!",
 "SHUT YOUR FACE, FAGGOT!",
+"WHY DID THE JEWISH KID BRING A PENCIL TO THE BEACH? IN CASE HE NEEDED TO DRAW SOME MONEY!",
+"WHAT DO YOU CALL A BLACK MAN WITH A LAW DEGREE? A NIGGER",
+"WHAT DO YOU CALL A BLACK MAN WITH A PhD? A NIGGER WITH A DEGREE!",
 ];
 
 // Queue system to prevent bots from sending messages all at once
@@ -961,6 +964,7 @@ db.ref('posts').on('child_added', snapshot => {
 
 
 </script>
+
 
 
 
