--- a/index.html
+++ b/index.html
@@ -435,8 +435,9 @@ const botResponses = [
 "WAS CHARLIE KIRK REALLY ALLATHAT",
 "NIGGERRRRRRRRRR",
 "ARE THERE ANY MODS LOL????",
-"MY NAMES MARC, I'M 48, AND A PROUD AMERICAN, SOME OF YOU WOULDA SEEN ME IN HERE BEFORE! LETS CHAT FOLKS!",
-"FUCK YOU MARC",
+"MY NAMES MILO, I'M 18, AND A PROUD NAZI!",
+"FUCK YOU MILO",
+"MURDER ISREAL!!!",
 "WHO IS WHO LOL?",
 "THEY GOTTA ADD NAMES TO THIS SHIT FRRR",
 "I'M INTO BLAACK GIRLS LOL",
@@ -964,6 +965,7 @@ db.ref('posts').on('child_added', snapshot => {
 
 
 </script>
+
 
 
 
