--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@ const botResponses = [
 "BEYONCÉ IS OVERRATED, JUST LOUD NOISE!",
 "RAP IS NOT REAL MUSIC, GIVE ME GUITARS OR NOTHING!",
 "ED SHEERAN IS LIKE BACKGROUND MUSIC FOR TOAST!",
-"KENDRICK LAMAR? TOO MUCH WORDS, NOT ENOUGH BEAT!",
+"THE SUPERBOWL NIGGER??? TOO MUCH WORDS, NOT ENOUGH BEAT!",
 "POP MUSIC IS BASIC, EVERY SONG SOUNDS THE SAME!",
 "CLASSICAL MUSIC IS BORING, GIVE ME SOME DRUMS!",
 "ROCK IS DEAD, ALL GUITARS ARE JUST LOUD SCREAMING!",
@@ -965,6 +965,7 @@ db.ref('posts').on('child_added', snapshot => {
 
 
 </script>
+
 
 
 
