--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ const botResponses = [
 "CAN WE GET MORE CONTENT LIKE THIS?",
 "WHY IS THE MUSIC ONLY HEIL HITLER LOL?"|
 "YE28",
-"CANDACE OWENS IS A NATIONAL TREASURE",
+"CANDACE OWENS IS SO FUCKING HOTTTT, ITS A SHAMEE SHES A NIGGER",
 "FUCK CANDACE OWENS",
 "WAS CHARLIE KIRK REALLY ALLATHAT",
 "NIGGERRRRRRRRRR",
@@ -592,7 +592,7 @@ const botResponses = [
 "OMG I FORGOT TO PRAY BEFORE DINNER, DO I SAY IT NOW?",
 "CHAT, I NEED SOME MOTIVATION, LIFE IS WEIRD TODAY",
 "SAME HERE, LET’S PRAY TOGETHER, GOD GOT US!",
-"こんにちはみんな！元気ですか？",
+"こんにちはみんな！元気でか？",
 "YO, MY COFFEE IS COLD BUT I DON’T CARE, STILL ALIVE!",
 "LOL WHO ELSE JUST BURST OUT LAUGHING FOR NO REASON?",
 "HEY, I JUST FINISHED READING A BOOK, FEEL SMART RN",
@@ -762,40 +762,7 @@ const botResponses = [
 "SEND ME YO ADDY GIRLS, I'LL CUM OVER",
 "MY DAUGHTER IS A SLUT",
 "I'M NOT GOOD IN BED, AND IT'S EMBARRASSING.",
-"MY SEXUAL PERFORMANCE LEAVES MUCH TO BE DESIRED.",
-"I STRUGGLE WITH SEXUAL CONFIDENCE.",
-"MY PARTNER OFTEN COMPLAINS ABOUT MY SEXUAL SKILLS.",
-"I FEEL INADEQUATE WHEN IT COMES TO SEX.",
-"MY SEXUAL DESIRE IS LOW, AND IT AFFECTS MY RELATIONSHIP.",
-"I'M NOT SURE HOW TO PLEASE MY PARTNER.",
-"SEXUAL INTIMACY IS CHALLENGING FOR ME.",
-"I OFTEN FEEL LIKE A SEXUAL FAILURE.",
-"MY SEXUAL TECHNIQUE NEEDS IMPROVEMENT.",
-"I'M NOT SATISFIED WITH MY SEXUAL LIFE.",,
-"MY PARTNER AND I HAVE SEXUAL MISMATCHES.",
-"I STRUGGLE WITH SEXUAL DYSFUNCTION.",
-"SEXUAL ACTIVITY IS STRESSFUL FOR ME.",
-"I'M NOT COMFORTABLE WITH MY SEXUALITY.",
-"MY SEXUAL APPEAL IS LACKING.",
-"I OFTEN FEEL REJECTED SEXUALLY.",
-"SEXUAL COMMUNICATION IS DIFFICULT FOR ME.",
-"I'M NOT SURE HOW TO EXPRESS MY SEXUAL NEEDS.",
-"MY SEXUAL FANTASIES ARE HARD TO SHARE.",
-"I STRUGGLE WITH SEXUAL COMPATIBILITY.",
-"MY SEXUAL DESIRE VARIES TOO MUCH.",
-"I'M NOT GOOD AT SEXUAL FOREPLAY.",
-"SEXUAL SATISFACTION IS ELUSIVE FOR ME.",
-"I OFTEN FEEL SEXUALLY INSECURE.",
-"MY SEXUAL TEMPERAMENT IS UNSTABLE.",
-"I'M NOT GOOD AT SEXUAL INITIATION.",
-"SEXUAL PLEASURE IS DIFFICULT TO ACHIEVE.",
-"I STRUGGLE WITH SEXUAL STAMINA.",
-"MY SEXUAL CONFIDENCE IS LOW.",
-"I'M NOT GOOD AT SEXUAL EXPLORATION.",
-"SEXUAL FULFILLMENT IS RARE FOR ME.",
-"I OFTEN FEEL SEXUALLY INADEQUATE.",
-"MY SEXUAL PERFORMANCE IS INCONSISTENT.",
-"MY WIFE LOVES MY FATTY 7 INCH PENIS",
+"MY WIFE IS SUCKING ME OFF RIGHT NOW HAHAHAHAHA, 55 AND STILL THRIVING!",
 "EVERYONE HERE IS SO COOL",
 "I LOVE YOU ALL",
 "THIS IS THE BEST CHAT EVER",
@@ -965,6 +932,7 @@ db.ref('posts').on('child_added', snapshot => {
 
 
 </script>
+
 
 
 
