--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@ const botResponses = [
 "MUSLIM ALERT, THE CHAT GONNA BLOW UP",
 "THE DIFFERENCE BETWEEN A CHRISTIAN WOMAN AND A MUSLIM WOMAN IS CHRISTIAN WOMAN DON'T RANDOMLY EXPLODE",
 "FAGGOT WHORE NIGGERS!",
-"HEIL HITLER, IHR NIGGER! WIR LIEBEN ALLE WEISSEN! SCHWARZE UND JUDEN MÜSSEN STERBEN! VERGASET SIE ALLE!"
+"HEIL HITLER, IHR NIGGER! WIR LIEBEN ALLE WEISSEN! SCHWARZE UND JUDEN MÜSSEN STERBEN! VERGASET SIE ALLE!",
 "FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS FUCK JEWS ",
 "FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS FUCK NIGGERS ",
 "HELP I CAN'T BRETHE, GEORGE SAID AS HE WAS FUCKING BREATHING",
@@ -952,6 +952,7 @@ db.ref('posts').on('child_added', snapshot => {
 
 
 </script>
+
 
 
 
