--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>NEWTONE</title>
 
 <!-- Favicon -->
-<link rel="icon" href="https://i.imgur.com/TX868pW.png" type="image/png">
+<link rel="icon" href="https://i.imgur.com/7GazN6A.jpeg" type="image/png">
 
 <!-- Social Preview (Link Embed Image) -->
 <meta property="og:title" content="NEWTONE">
@@ -190,3 +190,4 @@
   </script>
 </body>
 </html>
+
