--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <!-- Social Preview (Link Embed Image) -->
 <meta property="og:title" content="NEWTONE">
-<meta property="og:image" content="https://i.imgur.com/zBqC1Bd.png">
+<meta property="og:image" content="https://blobcdn.same.energy/b/fd/2e/fd2ecac314961daaf3936eb3f1b354c832b6ae12">
 <meta property="og:type" content="website">
 <meta property="og:description" content="LAMPOT JOURNAL — A Project by NEWTONE">
 <meta name="twitter:card" content="summary_large_image">
@@ -190,4 +190,5 @@
   </script>
 </body>
 </html>
+
 
