--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>ART - COMING SOON</title>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;700&display=swap" rel="stylesheet">
 <!-- Favicon -->
-<link rel="icon" href="https://i.imgur.com/7GazN6A.jpeg" type="image/png">
+<link rel="icon" href="https://i.imgur.com/h7K7WzP.jpeg" type="image/png">
 
 <!-- Social Preview (Link Embed Image) -->
 <meta property="og:title" content="ART - DECEMBER FILES">
@@ -371,3 +371,4 @@ window.addEventListener('load', ()=>{ setTimeout(()=>{ selectTrack(0); },100); }
 
 </body>
 </html>
+
