--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!-- Favicon -->
 <link rel="icon" href="https://i.imgur.com/h7K7WzP.jpeg" type="image/png">
 
-<!-- Social Preview (Link Embed Image) -->
+<!-- Social Preview -->
 <meta property="og:title" content="ART - DECEMBER FILES">
 <meta property="og:image" content="https://i.imgur.com/HeWLUZs.jpeg">
 <meta property="og:type" content="website">
@@ -16,6 +16,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="NEWTONE">
 <meta name="twitter:image" content="https://i.imgur.com/HeWLUZs.jpeg">
+
 <style>
 /* GLOBAL */
 * { box-sizing:border-box; margin:0; padding:0; }
@@ -75,24 +76,11 @@ body { font-family:'IBM Plex Mono', monospace; background:#000; color:#fff; text
 }
 
 /* Scrollbar styling */
-#trackList::-webkit-scrollbar {
-  width: 12px;
-}
-#trackList::-webkit-scrollbar-track {
-  background: #000;
-}
-#trackList::-webkit-scrollbar-thumb {
-  background-color: #fff;
-  border-radius: 6px;
-  border: 3px solid #000;
-}
-#trackList::-webkit-scrollbar-thumb:hover {
-  background-color: #ccc;
-}
-#trackList {
-  scrollbar-width: thin;
-  scrollbar-color: #fff #000;
-}
+#trackList::-webkit-scrollbar { width: 12px; }
+#trackList::-webkit-scrollbar-track { background: #000; }
+#trackList::-webkit-scrollbar-thumb { background-color: #fff; border-radius: 6px; border: 3px solid #000; }
+#trackList::-webkit-scrollbar-thumb:hover { background-color: #ccc; }
+#trackList { scrollbar-width: thin; scrollbar-color: #fff #000; }
 
 /* AUDIO PLAYER FIXED AT BOTTOM */
 #audioPlayerContainer {
@@ -108,54 +96,14 @@ body { font-family:'IBM Plex Mono', monospace; background:#000; color:#fff; text
   background: #000;
   z-index: 999;
 }
-#albumCover {
-  width:80px;
-  height:80px;
-  object-fit:cover;
-  border:2px solid #fff;
-}
-#audioControls {
-  display:flex;
-  flex-direction:column;
-  flex:1;
-  gap:10px;
-}
-#playerButtons {
-  display:flex;
-  gap:15px;
-  align-items:center;
-}
-.playPauseBtn {
-  width:40px;
-  height:40px;
-  border:2px solid #fff;
-  background:#000;
-  color:#fff;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  cursor:pointer;
-  font-size:18px;
-}
+#albumCover { width:80px; height:80px; object-fit:cover; border:2px solid #fff; }
+#audioControls { display:flex; flex-direction:column; flex:1; gap:10px; }
+#playerButtons { display:flex; gap:15px; align-items:center; }
+.playPauseBtn { width:40px; height:40px; border:2px solid #fff; background:#000; color:#fff; display:flex; align-items:center; justify-content:center; cursor:pointer; font-size:18px; }
 .playPauseBtn:active { transform:scale(0.95); }
-#progressContainer {
-  width:100%;
-  height:6px;
-  background:#222;
-  cursor:pointer;
-  position:relative;
-  border-radius:3px;
-}
-#progress {
-  height:100%;
-  background:#fff;
-  width:0%;
-  border-radius:3px;
-}
-#timeDisplay {
-  font-size:14px;
-  text-align:right;
-}
+#progressContainer { width:100%; height:6px; background:#222; cursor:pointer; position:relative; border-radius:3px; }
+#progress { height:100%; background:#fff; width:0%; border-radius:3px; }
+#timeDisplay { font-size:14px; text-align:right; }
 </style>
 </head>
 <body>
@@ -275,7 +223,7 @@ const trackNames = [
   "NIGHTS I KNOW - [FEAT. DYLNMBRY]",
   "ALWAYS - [FEAT. DYLNMBRY, DANTE WARREN, FELICA AYLIN]"
 ];
-let currentTrack = 0;
+let currentTrack = null; // no track selected on load
 
 function initTrackList(){
   trackList.innerHTML = '';
@@ -327,11 +275,17 @@ function selectTrack(index){
 }
 
 function initAudioPlayer(){
-  loadTrack(currentTrack);
+  // Player idle on load (no track loaded)
+  audioPlayer.src = '';
+  progress.style.width = '0%';
+  timeDisplay.textContent = '00:00 / 00:00';
+  playPauseBtn.textContent = '▶';
 
   playPauseBtn.addEventListener('click', ()=>{
-    if(audioPlayer.paused){ audioPlayer.play(); } 
-    else { audioPlayer.pause(); }
+    if(audioPlayer.src){
+      if(audioPlayer.paused){ audioPlayer.play(); } 
+      else { audioPlayer.pause(); }
+    }
   });
 
   audioPlayer.addEventListener('play', ()=> { playPauseBtn.textContent = '❚❚'; });
@@ -339,9 +293,11 @@ function initAudioPlayer(){
   audioPlayer.addEventListener('timeupdate', updateProgress);
 
   progressContainer.addEventListener('click', e=>{
-    const rect = progressContainer.getBoundingClientRect();
-    const percent = (e.clientX - rect.left) / rect.width;
-    audioPlayer.currentTime = percent * audioPlayer.duration;
+    if(audioPlayer.src){
+      const rect = progressContainer.getBoundingClientRect();
+      const percent = (e.clientX - rect.left) / rect.width;
+      audioPlayer.currentTime = percent * audioPlayer.duration;
+    }
   });
 }
 
@@ -365,10 +321,9 @@ function updateProgress(){
   }
 }
 
-// Select first track by default
-window.addEventListener('load', ()=>{ setTimeout(()=>{ selectTrack(0); },100); });
+// Select nothing by default
+window.addEventListener('load', ()=>{ setTimeout(()=>{ /* nothing selected */ },100); });
 </script>
 
 </body>
 </html>
-
