--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ const trackAudioURLs = [
   'https://raw.githubusercontent.com/Lampot/NEWTONE/main/IS%20IT%20OVER%20(feat.%20Felica%20Aylin).mp3',
   'https://raw.githubusercontent.com/Lampot/NEWTONE/main/MAGIC.mp3',
   'https://raw.githubusercontent.com/Lampot/NEWTONE/main/CLOSE%20IT%20ALL%20DOWN.mp3',
-  'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Coming%20Back.mp3',
+  'https://raw.githubusercontent.com/Lampot/NEWTONE/main/IT%20WAS%20FRIENDS.mp3',
   'https://raw.githubusercontent.com/Lampot/NEWTONE/main/NIGHTS%20I%20KNOW.mp3',
   'https://raw.githubusercontent.com/Lampot/NEWTONE/main/ALWAYS.mp3'
 ];
@@ -219,7 +219,7 @@ const trackNames = [
   "IS IT OVER? - [FEAT. DYLNMBRY, FELICA AYLIN]",
   "MAGIC - [FEAT. DYLNMBRY, DANTE WARREN]",
   "CLOSE IT ALL DOWN - [FEAT. DYLNMBRY]",
-  "NEVER COMING BACK - [FEAT. DYLNMBRY]",
+  "IT WAS FRIENDS - [FEAT. DYLNMBRY]",
   "NIGHTS I KNOW - [FEAT. DYLNMBRY]",
   "ALWAYS - [FEAT. DYLNMBRY, DANTE WARREN, FELICA AYLIN]"
 ];
@@ -327,3 +327,4 @@ window.addEventListener('load', ()=>{ setTimeout(()=>{ /* nothing selected */ },
 
 </body>
 </html>
+
