--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@ const albumData = {
     artist: 'DYLN, Donny Hathaway',
     cover: 'https://i.imgur.com/Wi4JHHN.png  ',
     tracks: [
-      { name: 'SOMEDAY WE\'LL ALL BE FREE', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/SOMEDAY%20WE\'LL%20ALL%20BE%20FREE.mp3' },
+      { name: '1. SOMEDAY WE\'LL ALL BE FREE', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/SOMEDAY%20WE\'LL%20ALL%20BE%20FREE.mp3' },
     ]
   },
   'icon-4': {
@@ -736,7 +736,7 @@ const albumData = {
     artist: 'DYLN',
     cover: 'https://i.imgur.com/1aL1gic.jpeg ',
     tracks: [
-      { name: 'LOVE LOVE LOVE', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/Love%20Love%20Love.mp3' },
+      { name: '1. LOVE LOVE LOVE', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/Love%20Love%20Love.mp3' },
     ]
   },
     'icon-7': {
