--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ footer a:hover { color: #000; }
 </div>
 
 <footer>
-  <a href="https://www.instagram.com/bigdildodylan    " target="_blank">instagram</a> / 
+  <a href="https://www.instagram.com/bigdildodylan    " target="_blank">instagram</a> 
 </footer>
 
 <!-- Main Album Popup -->
@@ -750,7 +750,7 @@ const albumData = {
     artist: 'DYLN, Donny Hathaway',
     cover: 'https://i.imgur.com/Wi4JHHN.png    ',
     tracks: [
-      { name: '1. SOMEDAY WE\'LL ALL BE FREE', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/SOMEDAY%20WE  \'LL%20ALL%20BE%20FREE.mp3' },
+      { name: '1. SOMEDAY WE\'LL ALL BE FREE', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/SOMEDAY%20WE\'LL%20ALL%20BE%20FREE.mp3' },
     ]
   },
   'icon-4': {
