--- a/index.html
+++ b/index.html
@@ -719,17 +719,17 @@ const albumData = {
     artist: 'DYLN',
     cover: 'https://i.imgur.com/DJv3wLD.jpeg    ',
     tracks: [
-      { name: 'BIRDS AND ANGELS', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/Birds%20and%20Angels.mp3    ' },
-      { name: 'SELFISH', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/SELFISH%20BEST%20VER%20(1).mp3' },
-      { name: 'QUIET', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/QUIET%20(feat.%20Julian%20Slater%2C%20Dante%20Warren).mp3' },
-      { name: 'SOMETIMES', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/sometimes%20art.mp3    ' },
-      { name: 'THIS FOR US', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/LIFESIZE%20(feat.%20Dante%20Warren).mp3' },
-      { name: 'THINGS CHANGE', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/thnsgschange.mp3    ' },
-      { name: 'FLOWERS GROW', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/flowers%20grow%20dantee.mp3    ' },
-      { name: 'OVERDOSE', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/OVERDOSE.mp3    ' },
-      { name: 'BELIEVE', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/believe%20art.mp3    ' },
-      { name: 'NEBRASKA', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/NEBRASKA%20TO%20ALASKA.mp3    ' },
-      { name: 'IS IT OVER?', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/IS%20IT%20OVER%20(feat.%20Felica%20Aylin).mp3' }
+      { name: '1. BIRDS AND ANGELS', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/Birds%20and%20Angels.mp3    ' },
+      { name: '2. SELFISH', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/SELFISH%20BEST%20VER%20(1).mp3' },
+      { name: '3. QUIET', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/QUIET%20(feat.%20Julian%20Slater%2C%20Dante%20Warren).mp3' },
+      { name: '4. SOMETIMES', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/sometimes%20art.mp3    ' },
+      { name: '5. THIS FOR US', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/LIFESIZE%20(feat.%20Dante%20Warren).mp3' },
+      { name: '6. THINGS CHANGE', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/thnsgschange.mp3    ' },
+      { name: '7. FLOWERS GROW', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/flowers%20grow%20dantee.mp3    ' },
+      { name: '8. OVERDOSE', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/OVERDOSE.mp3    ' },
+      { name: '9. BELIEVE', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/believe%20art.mp3    ' },
+      { name: '10. NEBRASKA', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/NEBRASKA%20TO%20ALASKA.mp3    ' },
+      { name: '11. IS IT OVER?', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/IS%20IT%20OVER%20(feat.%20Felica%20Aylin).mp3' }
     ]
   },
   'icon-2': {
@@ -737,20 +737,26 @@ const albumData = {
     artist: 'DYLN',
     cover: 'https://i.imgur.com/jvQuqg0.jpeg    ',
     tracks: [
-      { name: 'I NEED YOU HOME', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/I%20NEED%20YOU%20HOME.mp3    ' },
-      { name: 'CIVIL RIGHTS SIGN', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/CIVIL%20RIGHTS%20SIGN.mp3    ' },
-      { name: 'SEND THIS B!TCH UP', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/SEND%20THIS%20BITCH%20UP.mp3    ' },
-      { name: 'A WHOLE LOT', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/A%20WHOLE%20LOT%20(1).mp3' },
-      { name: 'STRIPPER TO CEO', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/STRIPPER%20TO%20CEO.mp3    ' },
-      { name: 'HEAVEN', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/HEAVEN.mp3    ' },
+      { name: '1. I NEED YOU HOME', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/I%20NEED%20YOU%20HOME.mp3    ' },
+      { name: '2. CIVIL RIGHTS SIGN', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/CIVIL%20RIGHTS%20SIGN.mp3    ' },
+      { name: '3. SEND THIS B!TCH UP', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/SEND%20THIS%20BITCH%20UP.mp3    ' },
+      { name: '4. A WHOLE LOT', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/A%20WHOLE%20LOT%20(1).mp3' },
+      { name: '5. STRIPPER TO CEO', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/STRIPPER%20TO%20CEO.mp3    ' },
+      { name: '6. HEAVEN', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/HEAVEN.mp3    ' },
     ]
   },
   'icon-3': {
-    name: 'SOMEDAY WE\'LL ALL BE FREE',
+    name: 'NEWTONE ERA',
     artist: 'DYLN, Donny Hathaway',
-    cover: 'https://i.imgur.com/Wi4JHHN.png    ',
+    cover: 'https://i.imgur.com/99aYcpG.png',
     tracks: [
-      { name: '1. SOMEDAY WE\'LL ALL BE FREE', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/SOMEDAY%20WE\'LL%20ALL%20BE%20FREE.mp3' },
+      { name: '1. FEAR', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/fear.mp3' },
+      { name: '2. LUCIFER', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/lucifer.mp3' },
+      { name: '3. UNLOCK', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/UNLOCK.mp3' },
+      { name: '4. VATICAN', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/VATICAN.mp3' },
+      { name: '5. LOVE LOVE LOVE', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/Love%20Love%20Love.mp3' },
+      { name: '6. SOMEDAY WE\'LL ALL BE FREE', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/SOMEDAY%20WELL%20ALL%20BE%20FREE.mp3' },
+    
     ]
   },
   'icon-4': {
@@ -854,6 +860,26 @@ audioPlayer.addEventListener('timeupdate', () => {
   if (audioPlayer.duration) {
     const percent = (audioPlayer.currentTime / audioPlayer.duration) * 100;
     progressBar.style.width = percent + '%';
+  }
+});
+audioPlayer.addEventListener('ended', () => {
+  if (currentTrackList.length === 0 || currentTrackIndex >= currentTrackList.length - 1) {
+    // No more tracks — stop or stay on last track
+    playIcon.src = 'https://img.icons8.com/ios-filled/50/000000/play--v1.png';
+    miniPlayIcon.src = 'https://img.icons8.com/ios-filled/50/000000/play--v1.png';
+    return;
+  }
+
+  // Move to next track
+  currentTrackIndex++;
+  const nextTrack = currentTrackList[currentTrackIndex];
+  if (nextTrack && nextTrack.src) {
+    playTrack(nextTrack.src, currentTrackIndex, currentTrackList, nextTrack.name);
+  } else {
+    currentTrackName = nextTrack ? nextTrack.name : '—';
+    updateMiniPlayer();
+    playIcon.src = 'https://img.icons8.com/ios-filled/50/000000/play--v1.png';
+    miniPlayIcon.src = 'https://img.icons8.com/ios-filled/50/000000/play--v1.png';
   }
 });
 
