--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@ const albumData = {
       { name: '6. THINGS CHANGE', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/thnsgschange.mp3' },
       { name: '7. FLOWERS GROW', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/flowers%20grow%20dantee.mp3' },
       { name: '8. OVERDOSE', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/OVERDOSE.mp3' },
-      { name: '9. BELIEVE', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/believe%20art.mp3' },
+      { name: '9. BELIEVE', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/Music/What%20To%20Believe.mp3' },
       { name: '10. NEBRASKA', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/NEBRASKA%20TO%20ALASKA.mp3' },
       { name: '11. IS IT OVER?', src: 'https://raw.githubusercontent.com/Lampot/NEWTONE/main/IS%20IT%20OVER%20(feat.%20Felica%20Aylin).mp3' }
     ]
@@ -1258,3 +1258,4 @@ document.getElementById('warning-proceed').addEventListener('click', () => {
 
 </body>
 </html>
+
