--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>newtone.world</title>
 
+  <link rel="icon" href="https://i.imgur.com/JNym9an.jpeg" type="image/png">
+
+<!-- Social Preview -->
+<meta property="og:title" content="newtone.world">
+<meta property="og:image" content="https://i.imgur.com/HeWLUZs.jpeg">
+<meta property="og:type" content="website">
+<meta property="og:description" content="newtone arts. music. fashion.">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="NEWTONE">
+<meta name="twitter:image" content="https://i.imgur.com/HeWLUZs.jpeg">
+
 <style>
 body {
   margin: 0;
@@ -90,3 +101,4 @@ nav a:hover span {
 
 </body>
 </html>
+
