--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@ nav a:hover span {
 
 <main>
   <nav>
-    <a href="https://open.spotify.com/artist/6NvjKnOvxSoVbuv4uDhBgw" target="_blank">
+    <a href="https://newtone.world/music.html" target="_blank">
       music <span>→</span>
     </a>
-    <a href="/fashion.html">
+    <a href="https://newtone.world/fashion.html">
       fashion <span>→</span>
     </a>
-    <a href="/about.html">
+    <a href="https://newtone.world/coming-soon.html">
       about <span>→</span>
     </a>
     <a href="https://www.instagram.com/newtone.world/" target="_blank">
@@ -101,4 +101,5 @@ nav a:hover span {
 
 </body>
 </html>
+
 
