--- a/Kdawg.html
+++ b/Kdawg.html
@@ -485,7 +485,7 @@ footer a:hover { color: #000; }
 
 <div class="top-nav">
   <a href="https://open.spotify.com/artist/6NvjKnOvxSoVbuv4uDhBgw?si=yjT02rTLQD6q53iWzrOo9Q" target="_blank">music</a>
-  <a href="https://genius.com/artists/Dylnmbry" target="_blank">lyrics</a>
+  <a href="https://genius.com/artists/K1dawg" target="_blank">lyrics</a>
 </div>
 
 <div class="desktop" id="desktop">
@@ -1100,4 +1100,5 @@ document.getElementById('warning-proceed').addEventListener('click', () => {
 </script>
 
 </body>
+
 </html>
