Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ nav a:hover span {
 
 <main>
   <nav>
-    <a href="https://newtone.world/music.html" target="_blank">
+    <a href="https://newtone.world/music.html">
       music <span>→</span>
     </a>
     <a href="https://newtone.world/fashion.html">
@@ -101,5 +101,6 @@ nav a:hover span {
 
 </body>
 </html>
+
 
 
