--- a/music.html
+++ b/music.html
@@ -75,7 +75,7 @@ nav a:hover span {
     <a href="https://newtone.world/dante-warren.html">
       DANTE WARREN <span>→</span>
     </a>
-    <a href="https://newtone.world/kdawg.html">
+    <a href="https://newtone.world/Kdawg.html">
       KDAWG <span>→</span>
     </a>
     <a href="https://newtone.world/coming-soon.html">
@@ -93,3 +93,4 @@ nav a:hover span {
 
 </body>
 </html>
+
