--- a/dante-warren.html
+++ b/dante-warren.html
@@ -228,14 +228,14 @@
     <p class="meta">
       newtone is a space for artists who don’t resolve.
       who sit inside uncertainty.
-      who let the work speak quietly.
+      who let the work speak quietly. Contact me at livelampot@gmail.com
     </p>
   </main>
 
   <div class="contact-trigger" id="contactToggle">contact</div>
   <div class="contact-box" id="contactBox">
     <span>signals</span>
-    <div class="copy" data-copy="newtone.inquires@gmail.com">newtone.inquires@gmail.com</div>
+    <div class="copy" data-copy="newtone.inquires@gmail.com">livelampot@gmail.com</div>
     <a href="https://instagram.com/newtone.world" target="_blank">outside</a>
     <a href="https://open.spotify.com/artist/4QES3a0iVXMZmDaNTHqh5a?si=gTxeJWZ8RaqOYAbnIMv3nw" target="_blank">elsewhere</a>
   </div>
@@ -258,3 +258,4 @@
   </script>
 </body>
 </html>
+
