--- a/dante-warren.html
+++ b/dante-warren.html
@@ -219,7 +219,7 @@
       with newtone, dante exists as part of a wider signal.
       not a product, not a persona.
       just motion, sound, and intention moving forward
-      without asking permission.
+      without asking permission. Currently Dante Warren has 1 song out called THIS IS MAGIC with DYLN.
 
     <a class="music-link" href="https://open.spotify.com/track/3OgAtoAst5E66FWpT5R4tK?si=bac532c4cf034538" target="_blank">
       Listen to dante’s latest track "THIS IS MAGIC" on Spotify
@@ -258,4 +258,5 @@
   </script>
 </body>
 </html>
+
 
